update lwjgl to 3.4.1